Fix mobile whitespace

--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -1,3 +1,7 @@
+html,
+body {
+  overflow-x: hidden;
+}
 nav {
   background-color: white;
   height: 64px;
